# spheres

./: CMakeLists.txt  ThreadSafeQueue.h  bench.cpp  bittest.cpp  build_pybind.sh  build_tree.py  concurrentqueue.h  cube_masks.cpp  defs.h  diophantine.cpp  diophantine.h  filter_files.cpp  lightweightsemaphore.h  main.cpp  main_files.cpp  piles.cpp  piles.h  piles.py  setup.py  solve_piles.py  solve_piles_new.py  test.py  test_diophantine.cpp  test_piles.cpp  trei.h
diophantine_analysis/: analyze.cpp
src/: bitfiltertree.cpp  bitfiltertree.h  defs.h  piles.cpp  piles.h
